# Manager

./: .gitignore  README.md  list_of_initiations_needed.txt  requirements.txt  setup.cfg  setup.py  test.py  test_acc.py  test_buy.py  test_crm.py  test_customer.py  test_hr.py  test_sell.py  test_stock.py  test_ui.py
emanager/: README.md  __init__.py  constants.py  imports.py
emanager/UI/: frames.py  main_window.py  menubar.py  widgets.py
emanager/accounting/: __init__.py  accounts.py  bank_core.py  ledger.py  transaction.py  transaction_ops.py
emanager/accounting/acc_data/: 1000000001.csv  1000000002.csv  1000000003.csv  1000000004.csv  1000000005.csv  chart_of_accounts.csv  treasury.csv
emanager/buy/: supplier.py
emanager/buy/buy_data/: acc_map.csv  supplier_data.csv
emanager/crm/: customer.py  customer_data.csv
emanager/crm/crm_data/: acc_map  acc_map.csv  acc_map.pkl  customer_data.csv
emanager/hr/: worker.py
emanager/hr/hr_data/: acc_map.csv  attendance_sheet.csv  salary_deposit_log.csv  worker_data.csv
emanager/sell/: customer.py  sell.py
emanager/stock/: __init__.py  item.py  stock.py
emanager/stock/stock_data/: item_groups.txt  items.csv  stock_data.csv  stock_ledger.csv
emanager/utils/: archive.py  data_types.py  directories.py  file_ops.py  receipt.py  stakeholder.py
