[metadata]
name = emanager
author = Somnath Pandit
author-email= panditsomnath10016@gmail.com
summary = Software to ease managment of small businesses.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/panditsomnath10016git/eManager
project_urls =
    Source Code = https://github.com/panditsomnath10016git/eManager 
license = MIT

[files]
packages = emanager
extra_files = requirements.txt